--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,12 +15,24 @@ p, ol, ul {
 }
 
 //Objects – class-based selectors which define undecorated design patterns, for example media object known from OOCSS
+.orange {
+	font-weight: bold;
+	color: $green;
+}
 a {
 	color: $greenlink;
 }
 .error {
 	color: red;
 }
+.banner-wrapper {
+	max-width: 1280px;
+	width: 90%;
+	padding: 10px 5%;
+	overflow: hidden;
+    margin: 0 auto;
+}
+
 .section-wrapper {
 	max-width: 1280px;
 	width: 90%;
@@ -43,42 +55,35 @@ a {
 }
 
 #hero {
-	margin-top: 56px;
-	background: url(../img/honeycomb.png) repeat $orange;
-	background-size: 300px;
-	background-position: center center;
+	margin-top: 50px;
+	background: $orange;
 	text-align: center;
-		h2 {
-			color: $white;
-			text-shadow: 0px 2px #906301;
-			font-size: 36px;
-		}
-		.homepage {
+	@include mq(tablet){
+		margin-top: 90px;
+	}
+	h2 {
+		color: $white;
+		font-size: 18px;
+		@include mq(tablet){
 			font-size: 24px;
-			@include mq(tablet){
-				font-size: 36px;
-			}
-			.yellow {
-				color: #ffff77;
-			}
 		}
-	.definition {
-		text-align: left;
-		p {
-			text-align: left;
-			color: $darkgrey;
+		@include mq(desktop){
+			font-size: 30px;
 		}
-		ol {
-			font-size: 1.15em;
-			text-align: left;
-			margin: 0 0 0 20px;
-			padding: 0;
-			color: $darkgrey;
-			li {
-				margin: 0;
-				padding: 0 0 20px 0;
-			}
-		}
+	}
+}
+
+#carousel {
+	background: url(../img/carousel.jpg);
+	background-size: cover;
+	background-position: center center;
+	height: 150px;
+	transition: height 0.15s ease-out;
+	@include mq(tablet){
+		height: 300px;
+	}
+	@include mq(desktop){
+		height: 450px;
 	}
 }
 
@@ -176,10 +181,7 @@ a {
 }
 #bio {
 	text-align: center;
-	background: url(../img/honeycomb2.png) repeat $green;
-	h2 {
-		color: darken($green, 30%);
-	}
+	background: #f1f1f1;
 	.bio-container {
 		padding: 20px 0;
 		overflow: hidden;
@@ -200,11 +202,7 @@ a {
 				width: 100%;
 				max-width: 150px;
 				height: auto;
-				// circle border-radius: 100px; 
-				// -webkit-clip-path: polygon(23% 9%, 77% 9%, 100% 50%, 77% 90%, 23% 90%, 0 50%);
-				// clip-path: polygon(23% 9%, 77% 9%, 100% 50%, 77% 90%, 23% 90%, 0 50%);
-				-webkit-clip-path: polygon(50% 0%, 92% 25%, 92% 75%, 50% 100%, 8% 75%, 8% 25%);
-				clip-path: polygon(50% 0%, 92% 25%, 92% 75%, 50% 100%, 8% 75%, 8% 25%);
+				border-radius: 100px; 
 			}
 		}
 		.bio-container-right {
@@ -217,7 +215,7 @@ a {
 		 	}
 			h3 {
 				text-align: center;
-				color: $white;
+				color: $darkgrey;
 				margin: 0;
 				@include mq(tablet){
 			 		text-align: left;
@@ -251,14 +249,14 @@ a {
 		color: $darkgrey;
 		li {
 			margin: 0;
-			padding: 0 0 20px 0;
+			padding: 0;
 		}
 	}
 	h2 {
-		color: $green;
+		color: $darkgrey;
 	}
 	h3 {
-		color: $orange;
+		color: $darkgrey;
 	}
 }
 
