--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,7 +17,7 @@ p, ol, ul {
 //Objects – class-based selectors which define undecorated design patterns, for example media object known from OOCSS
 .orange {
 	font-weight: bold;
-	color: $green;
+	color: darken($green, 15%);
 }
 a {
 	color: $greenlink;
@@ -249,7 +249,7 @@ a {
 		color: $darkgrey;
 		li {
 			margin: 0;
-			padding: 0;
+			padding: 0 0 10px 0;
 		}
 	}
 	h2 {
