--- a/css/styles.css
+++ b/css/styles.css
@@ -203,9 +203,14 @@ header img {
 p, ol, ul {
   line-height: 150%; }
 
-.orange {
+.dark {
   font-weight: bold;
-  color: #389678; }
+  color: #000; }
+
+.center {
+  text-align: center;
+  max-width: 640px;
+  margin: 0 auto; }
 
 a {
   color: #049634; }
@@ -218,7 +223,12 @@ a {
   width: 90%;
   padding: 10px 5%;
   overflow: hidden;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background: none; }
+  @media (min-width: 768px) {
+    .banner-wrapper {
+      background: url(../img/honeycomb3.png) no-repeat;
+      background-position: 60px; } }
 
 .section-wrapper {
   max-width: 1280px;
@@ -275,18 +285,49 @@ a {
   display: block;
   overflow: hidden;
   height: auto; }
-  #process .process-block .process-left, #process .process-block .process-right {
-    width: 50%;
+  @media (min-width: 768px) {
+    #process .process-block {
+      margin: 0 0 50px 0; } }
+  #process .process-block .process-left {
+    width: 100%;
     float: left;
     text-align: left;
     display: block;
     overflow: hidden;
     height: auto; }
-    #process .process-block .process-left img, #process .process-block .process-right img {
-      max-width: 360px;
+    #process .process-block .process-left img {
+      max-width: 300px;
       width: 100%;
       box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.5);
       margin-bottom: 10px; }
+    @media (min-width: 768px) {
+      #process .process-block .process-left {
+        width: 33%; } }
+  #process .process-block .process-right {
+    width: 100%;
+    float: left;
+    text-align: left;
+    display: block;
+    overflow: hidden;
+    height: auto;
+    margin: 0; }
+    @media (min-width: 768px) {
+      #process .process-block .process-right {
+        width: 63%;
+        margin: 0 0 0 4%;
+        display: flex;
+        height: 265px; } }
+    #process .process-block .process-right .flexy {
+      display: flex;
+      align-self: center;
+      flex-direction: column; }
+      #process .process-block .process-right .flexy h3 {
+        margin: 0; }
+        @media (min-width: 768px) {
+          #process .process-block .process-right .flexy h3 {
+            margin: 0 0 20px 0; } }
+      #process .process-block .process-right .flexy p {
+        margin: 0; }
 
 #services {
   text-align: center; }
@@ -356,7 +397,8 @@ a {
     text-align: center; }
     @media (min-width: 768px) {
       #bio .bio-container {
-        text-align: left; } }
+        text-align: left;
+        padding: 30px 0; } }
     #bio .bio-container .bio-container-left {
       text-align: center;
       display: inline-block;
@@ -371,6 +413,20 @@ a {
         max-width: 150px;
         height: auto;
         border-radius: 100px; }
+      #bio .bio-container .bio-container-left h3 {
+        text-align: center;
+        color: #302f30;
+        margin: 0;
+        font-size: 1.17em;
+        margin: 10px 0 10px 0;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 10px; }
+        @media (min-width: 768px) {
+          #bio .bio-container .bio-container-left h3 {
+            padding: 0;
+            margin: 0;
+            border: none;
+            font-size: 1em; } }
     #bio .bio-container .bio-container-right {
       display: inline-block;
       width: 100%;
@@ -379,24 +435,35 @@ a {
         #bio .bio-container .bio-container-right {
           width: 70%;
           float: left; } }
-      #bio .bio-container .bio-container-right h3 {
-        text-align: center;
-        color: #302f30;
-        margin: 0; }
-        @media (min-width: 768px) {
-          #bio .bio-container .bio-container-right h3 {
-            text-align: left; } }
       #bio .bio-container .bio-container-right p {
         display: inline-block;
         text-align: left;
         width: 100%;
-        color: #302f30; }
+        color: #302f30;
+        margin: 0; }
       #bio .bio-container .bio-container-right a {
         color: #049634;
         white-space: nowrap; }
       #bio .bio-container .bio-container-right .fa {
         font-size: 32px;
         color: #bbbbbb; }
+
+#exp .exp-left {
+  width: 100%;
+  float: left;
+  padding: 0; }
+  @media (min-width: 768px) {
+    #exp .exp-left {
+      width: 45%;
+      padding: 0 5% 0 0; } }
+#exp .exp-right {
+  width: 100%;
+  float: left;
+  padding: 0; }
+  @media (min-width: 768px) {
+    #exp .exp-right {
+      width: 45%;
+      padding: 0 0 0 5%; } }
 
 #nonprofits p, #contact p, #mission p {
   color: #302f30; }
