--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,22 +15,36 @@ p, ol, ul {
 }
 
 //Objects – class-based selectors which define undecorated design patterns, for example media object known from OOCSS
-.orange {
+.dark {
 	font-weight: bold;
-	color: darken($green, 15%);
+	color: #000;
 }
+
+.center {
+	text-align: center;
+	max-width: 640px;
+    margin: 0 auto;
+}
+
 a {
 	color: $greenlink;
 }
+
 .error {
 	color: red;
 }
+
 .banner-wrapper {
 	max-width: 1280px;
 	width: 90%;
 	padding: 10px 5%;
 	overflow: hidden;
     margin: 0 auto;
+    background: none;
+    @include mq(tablet){
+    	background: url(../img/honeycomb3.png) no-repeat;
+    	background-position: 60px;
+    }
 }
 
 .section-wrapper {
@@ -43,6 +57,7 @@ a {
 		padding: 60px 5%;
 	}
 }
+
 .section-wrapper2 {
 	max-width: 800px;
 	width: 90%;
@@ -93,18 +108,53 @@ a {
 		display: block;
 		overflow: hidden;
 		height: auto;
-		.process-left, .process-right {
-			width: 50%;
+		@include mq(tablet){
+			margin: 0 0 50px 0;
+		}
+		.process-left {
+			width: 100%;
 			float: left;
 			text-align: left;
 			display: block;
 			overflow: hidden;
 			height: auto;
 			img {
-				max-width: 360px;
+				max-width: 300px;
 				width: 100%;
 				box-shadow: 1px 5px 10px rgba(0,0,0,0.5);
 				margin-bottom: 10px;
+			}
+			@include mq(tablet){
+				width: 33%;
+			}
+		}
+		.process-right {
+			width: 100%;
+			float: left;
+			text-align: left;
+			display: block;
+			overflow: hidden;
+			height: auto;
+			margin: 0;
+			@include mq(tablet){
+				width: 63%;
+				margin: 0 0 0 4%;
+				display: flex;
+				height: 265px;
+			}
+			.flexy {
+				display: flex;
+				align-self: center;
+				flex-direction: column;
+				h3 {
+					margin: 0;
+					@include mq(tablet){
+						margin: 0 0 20px 0;
+					}
+				}
+				p {
+					margin: 0;
+				}					
 			}
 		}
 	}
@@ -179,6 +229,7 @@ a {
 		}
 	}
 }
+
 #bio {
 	text-align: center;
 	background: #f1f1f1;
@@ -188,6 +239,7 @@ a {
 		text-align: center;
 		@include mq(tablet){
 	 		text-align: left;
+	 		padding: 30px 0;
 	 	}
 	 	.bio-container-left {
 	 		text-align: center;
@@ -204,6 +256,21 @@ a {
 				height: auto;
 				border-radius: 100px; 
 			}
+			h3 {
+				text-align: center;
+				color: $darkgrey;
+				margin: 0;
+				font-size: 1.17em;
+				margin: 10px 0 10px 0;
+			    border-bottom: 1px solid #ccc;
+			    padding-bottom: 10px;
+			    @include mq(tablet){
+			    	padding: 0;
+			    	margin: 0;
+			    	border: none;
+			    	font-size: 1em;
+			    }
+			}
 		}
 		.bio-container-right {
 			display: inline-block;
@@ -213,19 +280,12 @@ a {
 		 		width: 70%;
 		 		float: left;
 		 	}
-			h3 {
-				text-align: center;
-				color: $darkgrey;
-				margin: 0;
-				@include mq(tablet){
-			 		text-align: left;
-			 	}
-			}
 			p {
 				display: inline-block;
 				text-align: left;
 				width: 100%;
 				color: $darkgrey;
+				margin: 0;
 			}
 			a {
 				color: $greenlink;
@@ -238,6 +298,29 @@ a {
 		}
 	}
 }
+
+#exp {
+	.exp-left {
+		width: 100%;
+		float: left;
+		padding:0;
+		@include mq(tablet){
+			width: 45%;
+			padding: 0 5% 0 0;
+		}
+	}
+	.exp-right {
+		width: 100%;
+		float: left;
+		padding:0;
+		@include mq(tablet){
+			width: 45%;
+			padding: 0 0 0 5%;
+		}
+	
+	}
+}
+
 #nonprofits, #contact, #mission {
 	p {
 		color: $darkgrey;
@@ -312,6 +395,7 @@ a {
 		}
 	}
 }
+
 #quote {
 	text-align: center;
 	background: $lightgrey;
@@ -322,6 +406,7 @@ a {
 		font-size: 	12px;
 	}
 }
+
 #iframeform {
 	label {
 		display: block;
