--- a/css/styles.css
+++ b/css/styles.css
@@ -203,15 +203,6 @@ header img {
 p, ol, ul {
   line-height: 150%; }
 
-.dark {
-  font-weight: bold;
-  color: #000; }
-
-.center {
-  text-align: center;
-  max-width: 640px;
-  margin: 0 auto; }
-
 a {
   color: #049634; }
 
@@ -250,6 +241,16 @@ a {
     .section-wrapper2 {
       padding: 60px 5%; } }
 
+.section-wrapper3 {
+  max-width: 800px;
+  width: 90%;
+  padding: 10px 5%;
+  overflow: hidden;
+  margin: 0 auto; }
+  @media (min-width: 768px) {
+    .section-wrapper3 {
+      padding: 20px 5%; } }
+
 #hero {
   margin-top: 50px;
   background: #faa918;
@@ -280,6 +281,21 @@ a {
     #carousel {
       height: 450px; } }
 
+#nonprofits p, #contact p, #mission p {
+  color: #302f30; }
+#nonprofits ol, #nonprofits ul, #contact ol, #contact ul, #mission ol, #mission ul {
+  text-align: left;
+  margin: 0 0 0 20px;
+  padding: 0;
+  color: #302f30; }
+  #nonprofits ol li, #nonprofits ul li, #contact ol li, #contact ul li, #mission ol li, #mission ul li {
+    margin: 0;
+    padding: 0 0 10px 0; }
+#nonprofits h2, #contact h2, #mission h2 {
+  color: #302f30; }
+#nonprofits h3, #contact h3, #mission h3 {
+  color: #302f30; }
+
 #process .process-block {
   margin: 0 0 30px 0;
   display: block;
@@ -291,7 +307,7 @@ a {
   #process .process-block .process-left {
     width: 100%;
     float: left;
-    text-align: left;
+    text-align: center;
     display: block;
     overflow: hidden;
     height: auto; }
@@ -302,7 +318,8 @@ a {
       margin-bottom: 10px; }
     @media (min-width: 768px) {
       #process .process-block .process-left {
-        width: 33%; } }
+        width: 33%;
+        text-align: left; } }
   #process .process-block .process-right {
     width: 100%;
     float: left;
@@ -310,13 +327,15 @@ a {
     display: block;
     overflow: hidden;
     height: auto;
-    margin: 0; }
+    margin: 0;
+    text-align: center; }
     @media (min-width: 768px) {
       #process .process-block .process-right {
         width: 63%;
         margin: 0 0 0 4%;
         display: flex;
-        height: 265px; } }
+        height: 265px;
+        text-align: left; } }
     #process .process-block .process-right .flexy {
       display: flex;
       align-self: center;
@@ -388,8 +407,60 @@ a {
           margin: 0;
           color: #302f30; }
 
+.svcontainerm {
+  margin: 50px 0 0 0;
+  display: block; }
+  @media (min-width: 768px) {
+    .svcontainerm {
+      display: none; } }
+  .svcontainerm h4 {
+    margin: 0; }
+  .svcontainerm p {
+    margin-top: 0; }
+  .svcontainerm .svc {
+    width: 100%;
+    float: left; }
+    .svcontainerm .svc .accbutton {
+      margin-bottom: 10px;
+      overflow: hidden; }
+      .svcontainerm .svc .accbutton .img-wrap {
+        width: 50px;
+        display: inline-block;
+        float: left; }
+        .svcontainerm .svc .accbutton .img-wrap img {
+          width: 50px;
+          height: 50px;
+          display: inline-block;
+          float: right;
+          padding-top: 12px; }
+      .svcontainerm .svc .accbutton .text-wrap {
+        width: 80%;
+        display: inline-block;
+        float: left; }
+        .svcontainerm .svc .accbutton .text-wrap h3 {
+          border-bottom: #faa918 1px solid;
+          height: 27px;
+          margin: 0;
+          padding: 5px 5%;
+          width: 90%;
+          font-size: 1.17em; }
+          @media (min-width: 768px) {
+            .svcontainerm .svc .accbutton .text-wrap h3 {
+              font-size: 1em; } }
+          @media (min-width: 1024px) {
+            .svcontainerm .svc .accbutton .text-wrap h3 {
+              font-size: 1.17em; } }
+        .svcontainerm .svc .accbutton .text-wrap p {
+          padding: 5px 5%;
+          margin: 0;
+          width: 90%; }
+
 .svcontainer {
-  margin: 50px 0 0 0; }
+  margin: 50px 0 0 0;
+  display: none; }
+  @media (min-width: 768px) {
+    .svcontainer {
+      display: block; } }
   .svcontainer .svc-left {
     width: 50%;
     float: left; }
@@ -398,25 +469,38 @@ a {
       .svcontainer .svc-left .svc-ul li {
         height: auto;
         overflow: hidden;
-        padding: 0 0 40px 0; }
-        .svcontainer .svc-left .svc-ul li img {
-          width: 75px;
-          height: 75px;
+        margin: 0 0 20px 0 !important; }
+        .svcontainer .svc-left .svc-ul li .img-wrap {
+          width: 25%;
           display: inline-block;
           float: left; }
-        .svcontainer .svc-left .svc-ul li h3 {
+          .svcontainer .svc-left .svc-ul li .img-wrap img {
+            width: 75px;
+            height: 75px;
+            display: inline-block;
+            float: right;
+            cursor: pointer; }
+        .svcontainer .svc-left .svc-ul li .text-wrap {
+          width: 75%;
           display: inline-block;
-          float: left;
-          border-bottom: #faa918 2px solid;
-          height: 27px;
-          margin: 0;
-          padding: 5px 5%; }
-        .svcontainer .svc-left .svc-ul li p {
-          display: inline-block;
-          float: left;
-          width: 70%;
-          padding: 5px 5%;
-          margin: 0; }
+          float: left; }
+          .svcontainer .svc-left .svc-ul li .text-wrap h3 {
+            border-bottom: #faa918 2px solid;
+            height: 27px;
+            margin: 0;
+            padding: 5px 5%;
+            width: 90%;
+            font-size: 1.17em; }
+            @media (min-width: 768px) {
+              .svcontainer .svc-left .svc-ul li .text-wrap h3 {
+                font-size: 1em; } }
+            @media (min-width: 1024px) {
+              .svcontainer .svc-left .svc-ul li .text-wrap h3 {
+                font-size: 1.17em; } }
+          .svcontainer .svc-left .svc-ul li .text-wrap p {
+            padding: 5px 5%;
+            margin: 0;
+            width: 90%; }
   .svcontainer .svc-right {
     width: 50%;
     float: left; }
@@ -424,9 +508,10 @@ a {
       margin: 0; }
     .svcontainer .svc-right p {
       margin-top: 0; }
-    .svcontainer .svc-right .audit-text {
+    .svcontainer .svc-right .rtext {
       border-left: 2px solid #faa918;
-      padding-left: 25px; }
+      padding-left: 25px;
+      min-height: 556px; }
 
 #bio {
   text-align: center;
@@ -504,21 +589,6 @@ a {
     #exp .exp-right {
       width: 45%;
       padding: 0 0 0 5%; } }
-
-#nonprofits p, #contact p, #mission p {
-  color: #302f30; }
-#nonprofits ol, #nonprofits ul, #contact ol, #contact ul, #mission ol, #mission ul {
-  text-align: left;
-  margin: 0 0 0 20px;
-  padding: 0;
-  color: #302f30; }
-  #nonprofits ol li, #nonprofits ul li, #contact ol li, #contact ul li, #mission ol li, #mission ul li {
-    margin: 0;
-    padding: 0 0 10px 0; }
-#nonprofits h2, #contact h2, #mission h2 {
-  color: #302f30; }
-#nonprofits h3, #contact h3, #mission h3 {
-  color: #302f30; }
 
 #footer {
   text-align: center; }
@@ -600,9 +670,36 @@ a {
 #iframeform a {
   color: #049634; }
 
+.dark {
+  font-weight: bold;
+  color: #000; }
+
+.center {
+  text-align: center;
+  max-width: 640px;
+  margin: 0 auto; }
+
+.greybg {
+  background: #f1f1f1; }
+
 .mission-header {
   background: url(../img/honeycomb2.png) repeat #faa918 !important;
   background-size: 300px !important;
   background-position: center center !important; }
+
+.svc-select {
+  width: 85% !important;
+  padding: 0 0 10px 15% !important; }
+
+.hide {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden; }
+
+.destroy {
+  display: none; }
 
 /*# sourceMappingURL=styles.css.map */
