--- a/scss/_partials/_ui.scss
+++ b/scss/_partials/_ui.scss
@@ -5,6 +5,7 @@ $darkgrey: #302f30;
 $white: #fff;
 $green: #5ac1a0;
 $greenlink: #049634;
+$teal: #2aa1a1;
 
 body {
 	font-family: 'Roboto', sans-serif;
