--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,6 +18,7 @@ p, ol, ul {
 
 a {
 	color: $greenlink;
+	cursor: pointer;
 }
 
 .error {
@@ -69,6 +70,12 @@ a {
 		padding: 20px 5%;
 	}
 }
+
+h2 > i, h3 > i  {
+	padding: 0 6px 0 0;
+}
+
+
 
 #hero {
 	margin-top: 50px;
@@ -285,6 +292,7 @@ a {
 	}
 	h4 {
 		margin: 0;
+		color: $green;
 	}
 	p {
 		margin-top: 0;
@@ -379,12 +387,16 @@ a {
 					display: inline-block;
 					float: left;
 					h3 {
-						border-bottom: $orange 2px solid;
+						border-bottom: $white 2px solid;
 						height:27px;
 						margin: 0;
 						padding: 5px 5%;
 						width: 90%;
 						font-size: 1.17em;
+						cursor: pointer;
+						&:hover {
+							color: $orange !important;
+						}
 						@include mq(tablet){
 							font-size: 1em;
 						}
@@ -406,6 +418,7 @@ a {
 		float: left;
 		h4 {
 			margin: 0;
+			color: $green;
 		}
 		p {
 			margin-top: 0;
@@ -494,18 +507,28 @@ a {
 		width: 100%;
 		float: left;
 		padding:0;
+		margin: 0;
 		@include mq(tablet){
-			width: 45%;
-			padding: 0 5% 0 0;
+			width: 41%;
+			margin: 20px 5% 0 0;
+			padding: 10px 2%;
+			background: #fff;
+			box-shadow: 1px 2px 10px rgba(0,0,0,0.1);
+			border-bottom: 4px solid $orange;
 		}
 	}
 	.exp-right {
 		width: 100%;
 		float: left;
 		padding:0;
+		margin: 0;
 		@include mq(tablet){
-			width: 45%;
-			padding: 0 0 0 5%;
+			width: 41%;
+			margin: 20px 0 0 5%;
+			padding: 10px 2%;
+			background: #fff;
+			box-shadow: 1px 2px 10px rgba(0,0,0,0.1);
+			border-bottom: 4px solid $orange;
 		}
 	
 	}
@@ -554,14 +577,6 @@ a {
 	 		color: $darkgrey;
 	 	}
 	}
-	.fa {
-		font-size: 32px;
-		color: $green;
-		cursor: pointer;
-		&:hover {
-			color: $orange;
-		}
-	}
 }
 
 #quote {
@@ -579,17 +594,15 @@ a {
 #iframeform {
 	label {
 		display: block;
-		font-weight: bold;
 		font-size: 14px;
-		color: $green;
+		color: $mediumgrey;
 	}
 	input, textarea, select {
 		display: block;
 		width: 99%;
 		height: 35px;
 		margin-bottom: 10px;
-		border-radius: 5px;
-		border: 1px solid $mediumgrey;
+		border: 1px solid $darkgrey;
 		font-family: Roboto, Arial, sans;
 		font-size: 12px;
 	}
@@ -599,14 +612,14 @@ a {
 	}
 	input[type="submit"] {
 		max-width: 150px;
-		border-radius: 50px;
 		border: none;
 		font-weight: bold;
-		background: green;
+		background: $green;
 		color: white;
+		border-radius: 5px;
 	}
 	a {
-		color: $greenlink;
+		color: $green;
 	}
 }
 
@@ -614,6 +627,7 @@ a {
 //Components – specific UI components. This is where majority of our work takes place and our UI components are often composed of Objects and Components
 .dark {
 	font-weight: bold;
+	color: $green;
 }
 
 .center {
@@ -624,6 +638,32 @@ a {
 
 .greybg {
 	background: #f1f1f1;
+}
+
+.dshadow {
+	box-shadow: 1px 2px 10px rgba(0,0,0,0.1);
+}
+
+.delink {
+	text-decoration: none;
+}
+
+.twitbut {
+	text-decoration: none; 
+	border: 1px solid $green; 
+	padding: 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	.fa {
+		font-size: 20px;
+	} 
+	&:hover {
+		background: $green;
+		color: white !important;
+		.fa {
+			color: white !important;
+		}
+	}
 }
 
 
@@ -646,6 +686,14 @@ a {
 	width:1px;
 	height:1px;
 	overflow:hidden;
+}
+
+.svc-border {
+	border-bottom: #faa918 2px solid !important;
+}
+
+.svc-orange {
+	color: $orange !important;
 }
 
 .destroy {
