--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -101,22 +101,27 @@ header img {
   cursor: pointer;
   display: inline-block;
   float: right;
-  padding: 28px 20px;
+  padding: 5px 10px;
   position: relative;
   user-select: none;
-  margin-top: 0;
+  margin: 10px;
+  border: 1px solid $orange;
   @include mq(tablet){
-    margin-top: 15px;
+    margin-top: 25px;
   }
+}
+
+.header-wrapper label {
 }
 
 .header .menu-icon .navicon {
   background: #333;
-  display: block;
+  display: inline-block;
   height: 2px;
   position: relative;
   transition: background .2s ease-out;
   width: 18px;
+  bottom: 5px;
 }
 
 .header .menu li:nth-child(1) {
